Digital Reference Learning Tool

--- a/VOCAB_GAME/FLASK/website/templates/handle-question.html
+++ b/VOCAB_GAME/FLASK/website/templates/handle-question.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Question {{question_number}}{% endblock %}
+{% block title %}Class number {{question_number}}{% endblock %}
 
 {% block styles %}
     <script src="https://d3js.org/d3.v6.min.js"></script>
