--- a/VOCAB_GAME/FLASK/website/templates/home.html
+++ b/VOCAB_GAME/FLASK/website/templates/home.html
@@ -12,7 +12,7 @@
 <!--<a class="nav-item nav-link" id="information" href="{{ url_for('views.information') }}"><i class="bi bi-info-circle-fill"></i></a>-->
 <!--<a class="nav-item nav-link" id="logout" href="/logout"><i class="bi bi-box-arrow-right"></i></a>-->
 
-<h1 class="scale-in-center">Welcome To OntoQuest</h1>
+<h1 class="scale-in-center">Welcome To Digital Reference Learning Tool</h1>
 <div class="navigation-bar">
     <div class="toggle_btn">
         <i class="bi bi-list"></i>
