--- a/VOCAB_GAME/FLASK/website/templates/number-question.html
+++ b/VOCAB_GAME/FLASK/website/templates/number-question.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Number of Questions{% endblock %}
+{% block title %}Number of Classes To Be Learned{% endblock %}
 
 {% block styles %}
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/number-question.css') }}">
