--- a/VOCAB_GAME/FLASK/website/static/css/home.css
+++ b/VOCAB_GAME/FLASK/website/static/css/home.css
@@ -400,7 +400,7 @@ h1 {
     .dropdown_menu {
         display: flex;
         flex-direction: column;
-        align items: center;
+        align-items: center;
         justify-content: center;
     }
 
@@ -445,6 +445,7 @@ h1 {
 .scale-in-center {
 	-webkit-animation: scale-in-center 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
 	        animation: scale-in-center 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+    font-size: 3rem;
 }
 
 @-webkit-keyframes scale-in-center {
