Correct Fab description & summary page update

--- a/VOCAB_GAME/FLASK/website/templates/summary.html
+++ b/VOCAB_GAME/FLASK/website/templates/summary.html
@@ -41,7 +41,7 @@
                     <div class="card-item swiper-slide">
                         <!--<li class="definition_class">
                             You haven't validated any definitions yet. Keep engaging with the game to contribute and enrich the vocabulary list!-->
-                            You have learnt about {{ total_question }} new concepts of the DR!
+                            You have learnt about {{ total_question }} new classes of the DR!
                         <!--</li>-->
                     </div>
                 </div>
