--- a/VOCAB_GAME/FLASK/website/static/css/mobile-ontology-visualization.css
+++ b/VOCAB_GAME/FLASK/website/static/css/mobile-ontology-visualization.css
@@ -122,7 +122,7 @@ h1 {
 }
 
 .collapsible {
-  background-color: #64203F;
+  background-color: #b8b8b9;
   color: #818181;
   cursor: pointer;
   padding: 0 5px;
@@ -165,7 +165,7 @@ button:focus {outline:0;}
   height: auto;
   overflow: hidden;
   transition: max-height 0.2s ease-out;
-  background-color: #46336e;
+  background-color: #43a1f8;
   display: block;
   font-size: 13px;
   text-align: justify;
@@ -215,7 +215,7 @@ button:focus {outline:0;}
 .zoom-element {
     height: 40px; /* Adjust the height of the range input as needed */
     color: white;
-    background-color: #64203F; /* Element color */
+    background-color: #b8b8b9; /* Element color */
     cursor: pointer;
     font-size: 25px; /* Adjust the font size as needed */
     display: flex; /* Use flexbox to center the content horizontally and vertically */
@@ -236,7 +236,7 @@ button:focus {outline:0;}
 
 .zoom-buttons button:hover {
     background-color: white;
-    color: #64203F;
+    color: #b8b8b9;
 }
 
 .slider {
@@ -282,7 +282,7 @@ button:focus {outline:0;}
 }
 
 .navigation-bar a:hover {
-    color: #2B0730;
+    color: #43a1f8;
 }
 
 .toggle_btn {
