--- a/VOCAB_GAME/FLASK/website/static/css/sign-up.css
+++ b/VOCAB_GAME/FLASK/website/static/css/sign-up.css
@@ -66,7 +66,7 @@ h1 {
 
 /* Styles for the primary button */
 .btn-primary {
-    background-color: #46336e;
+    background-color: #43a1f8;
     color: white;
     padding: 14px 20px;
     margin: 4px auto 10px;
