--- a/VOCAB_GAME/FLASK/website/templates/disagreement.html
+++ b/VOCAB_GAME/FLASK/website/templates/disagreement.html
@@ -8,14 +8,14 @@
 
 {% block content %}
 <!-- Navigation link to home -->
-<a class="nav-item nav-link" id="home" href="/"><i class="bi bi-house-door-fill"></i></a>
+<a class="nav-item nav-link" id="home" href="/"><i class="bi bi-house-up-fill"></i></a>
 <!-- Mobile Navigation Bar -->
 <div class="navigation-bar">
     <div class="toggle_btn">
         <i class="bi bi-list"></i>
     </div>
     <div class="dropdown_menu">
-        <li><a href="/"><i class="bi bi-house-door-fill"></i></a></li>
+        <li><a href="/"><i class="bi bi-house-up-fill"></i></a></li>
         <li><a href="/logout"><i class="bi bi-box-arrow-right"></i></a></li>
     </div>
 </div>
