--- a/VOCAB_GAME/FLASK/website/templates/enter-definition.html
+++ b/VOCAB_GAME/FLASK/website/templates/enter-definition.html
@@ -10,20 +10,20 @@
 {% block content %}
 <!-- Button to go back to the previous page -->
 <button onclick="goBack()" id="back">
-    <i class="bi bi-caret-left-fill"></i>
+    <i class="bi bi-arrow-left-circle-fill"></i>
     <span class="tooltip">Back</span>
 </button>
 
 <!-- Navigation link to home -->
-<a class="nav-item nav-link" id="home" href="/"><i class="bi bi-house-door-fill"></i></a>
+<a class="nav-item nav-link" id="home" href="/"><i class="bi bi-house-up-fill"></i></a>
 <!-- Mobile Navigation Bar -->
 <div class="navigation-bar">
     <div class="toggle_btn">
         <i class="bi bi-list"></i>
     </div>
     <div class="dropdown_menu">
-        <li><a href="/"><i class="bi bi-house-door-fill"></i></a></li>
-        <li><button class="backButton" onclick="goBack()"><i class="bi bi-caret-left-fill"></i></button></li>
+        <li><a href="/"><i class="bi bi-house-up-fill"></i></a></li>
+        <li><button class="backButton" onclick="goBack()"><i class="bi bi-arrow-left-circle-fill"></i></button></li>
         <li><a href="/logout"><i class="bi bi-box-arrow-right"></i></a></li>
     </div>
 </div>
