--- a/VOCAB_GAME/FLASK/website/templates/home.html
+++ b/VOCAB_GAME/FLASK/website/templates/home.html
@@ -72,9 +72,9 @@
                     {% endfor %}
                 </div>
             </div>-->#}
-            <h3 style="text-align: center;">The Digital Reference is the semantic web for semiconductor and supply chains containing semiconductors.</h3>
+            <h3 style="text-align: center; color: rgb(50, 50, 50)">The Digital Reference is the semantic web for semiconductor and supply chains containing semiconductors.</h3>
         </div>
-        <img style="margin: 5%;" src="{{ url_for('static', filename='picture/ontologies_pictures/supplychain.jpg') }}" alt="Supply Chain picture">
+        <!--<img style="margin: 5%;" src="{{ url_for('static', filename='picture/ontologies_pictures/supplychain.jpg') }}" alt="Supply Chain picture">-->
         {#
         <!-- Progress bar and level section 
         <div class="progress-bar-section">
