--- a/VOCAB_GAME/FLASK/website/templates/information.html
+++ b/VOCAB_GAME/FLASK/website/templates/information.html
@@ -9,7 +9,7 @@
 
 {% block content %}
 <!-- Navigation link to home -->
-<a class="nav-item nav-link" id="home" href="/"><i class="bi bi-house-door-fill"></i></a>
+<a class="nav-item nav-link" id="home" href="/"><i class="bi bi-house-up-fill"></i></a>
 
 <h1 class="scale-in-center">Ontoquest Guide</h1>
 <div class="content">
