--- a/VOCAB_GAME/FLASK/website/templates/summary.html
+++ b/VOCAB_GAME/FLASK/website/templates/summary.html
@@ -107,7 +107,7 @@
         </div>
     <div class="score"><p>Vocabulary Enrichment Score: {{vocab_score}}%</p></div>-->
 <div class="bottom">
-    <a class="nav-item nav-link" id="home" href="/"><i class="bi bi-house-door-fill"></i></a>
+    <a class="nav-item nav-link" id="home" href="/"><i class="bi bi-house-up-fill"></i></a>
 </div>
 
   <!-- Linking SwiperJS script -->
