--- a/VOCAB_GAME/FLASK/website/static/css/base.css
+++ b/VOCAB_GAME/FLASK/website/static/css/base.css
@@ -1,6 +1,6 @@
 body {
-    background-image: url('../picture/light-abstract-colourful.jpg');
-    background-color: #cccccc;
+    background-image: url('../picture/white-base.png');
+    background-color: #000000;
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
@@ -26,7 +26,7 @@ h1, h3 {
     font-weight: bold;
     line-height: 1;
     color: inherit;
-    text-shadow: 0 1px 0 #fff;
+    text-shadow: 0 1px 0 #000000;
     opacity: 0.5;
     padding: 0.5rem 1rem;
     background-color: transparent;
