--- a/VOCAB_GAME/FLASK/website/static/css/challenges.css
+++ b/VOCAB_GAME/FLASK/website/static/css/challenges.css
@@ -30,7 +30,7 @@ body {
 }
 
 .navigation-bar a:hover {
-    color: #2B0730;
+    color: #43a1f8;
 }
 
 .navigation-bar .toggle_btn {
@@ -64,7 +64,7 @@ body {
 .dropdown_menu li {
     padding: 10px;
     display: flex;
-    align items: center;
+    align-items: center;
     justify-content: center;
     font-size: 18px;
 }
@@ -143,7 +143,7 @@ h3 {
 }
 
 .challenge {
-    background-color:#64203F;
+    background-color:#b8b8b9;
     border-radius: 25px;
     padding: 5px 10px;
     margin: 15px auto;
@@ -165,7 +165,7 @@ h3 {
     .dropdown_menu {
         display: flex;
         flex-direction: column;
-    align items: center;
+    align-items: center;
     justify-content: center;
     }
 
