--- a/VOCAB_GAME/FLASK/website/static/css/detailed-overview.css
+++ b/VOCAB_GAME/FLASK/website/static/css/detailed-overview.css
@@ -44,21 +44,21 @@ body {
 #home:hover, #back:hover {
     background-color: white;
     border: solid;
-    color: #46336e;
+    color: #43a1f8;
 }
 
 #home {
     position: absolute;
     top: 10px;
     right: 10px;
-    background-color: #46336e;
+    background-color: #43a1f8;
 }
 
 #back {
     position: absolute;
     top: 10px;
     left: 10px;
-    background-color: #46336e;
+    background-color: #43a1f8;
 }
 
 #home, #back {
@@ -238,7 +238,7 @@ margin: 20px auto;
 }
 
 .navigation-bar a:hover {
-    color: #2B0730;
+    color: #43a1f8;
 }
 
 .toggle_btn {
