--- a/VOCAB_GAME/FLASK/website/static/css/handle-question.css
+++ b/VOCAB_GAME/FLASK/website/static/css/handle-question.css
@@ -20,16 +20,16 @@ body {
     top: 10px;
     right: 10px;
     padding: 10px 20px;
-    background-color: #46336e;
-    color: white;
+    background: linear-gradient(#82a7c9, #ee8196);
+    color: rgb(50, 50, 50);
     text-decoration: none;
+    border: 2px solid rgb(50, 50, 50);
     border-radius: 5px;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
 }
 #home:hover {
-    background-color: white;
+    background: white;
     border: solid;
-    color: #46336e;
 }
 
 .progress-bar-section {
@@ -42,7 +42,7 @@ body {
 .progress-bar {
     width: 100%;
     height: 15px;
-    background-color: #45336E;
+    background-color: #b8b8b9;
     border-radius: 10px;
     overflow: hidden;
     margin-top: 10px;
@@ -51,7 +51,7 @@ body {
 
 .progress-bar-fill {
     height: 100%;
-    background-color: white;
+    background: linear-gradient(90deg,#82a7c9, #ee8196);
     position: absolute;
     top: 0;
 }
@@ -59,7 +59,7 @@ body {
 .progress-percentage {
     margin-top: 5px;
     font-weight: bold;
-    color: white;
+    color: rgb(50, 50, 50);
     font-size: 20px;
 
 }
@@ -72,12 +72,12 @@ body {
 
 
 .visualization {
-    width: 30%; /* Adjust the width as needed */
+    width: 50%; /* Adjust the width as needed */
     padding: 10px; /* Add padding to the visualization for a consistent spacing */
-    border: 4px solid white;
-    border-radius: 20px;
-    background-color: #2B0730;
-    color: white;
+    border: 2px solid rgb(50, 50, 50);
+    border-radius: 5px;
+    background: linear-gradient(#82a7c9, #ee8196);
+    color: rgb(50, 50, 50);
     margin-right: 20px; /* Add margin at the right for spacing */
     display: flex;
     flex-direction: column;
@@ -86,9 +86,10 @@ body {
 
 .graph-container {
     width: 100%; /* Set the width to 100% */
-    border-radius: 20px;
+    border-radius: 5px;
+    border: 2px solid rgb(50, 50, 50);
     background-color: white;
-    color: white;
+    color: rgb(50, 50, 50);
     margin-bottom: 10px; /* Add margin at the bottom for spacing */
     position: relative;
     overflow: hidden; /* Prevent overflow of the graph visualization */
@@ -106,7 +107,7 @@ body {
 }
 
 .graph-container text.label-background {
-    background-color: rgba(255, 255, 255, 0.7); /* Add a semi-transparent white background to the text labels for better visibility */
+    background-color: rgba(255, 255, 255, 0.7); /* Add a semi-transparent rgb(50, 50, 50) background to the text labels for better visibility */
     padding: 3px 5px; /* Add padding to the text labels for a visually pleasing appearance */
 }
 
@@ -119,24 +120,24 @@ body {
 .zoom-element {
     width: 35px;
     height: 35px; /* Adjust the height of the range input as needed */
-    color: white;
-    background-color: #64203F; /* Element color */
+    color: rgb(50, 50, 50);
+    background-color: #b8b8b9; /* Element color */
     cursor: pointer;
     font-size: 25px; /* Adjust the font size as needed */
     display: flex; /* Use flexbox to center the content horizontally and vertically */
     justify-content: center; /* Center the content horizontally */
     align-items: center; /* Center the content vertically */
-    border: 1px solid white; /* Add border to the elements */
+    border: 1px solid rgb(50, 50, 50); /* Add border to the elements */
 
 }
 
 .zoom-buttons button:hover {
-    background-color: white;
-    color: #64203F;
+    background-color: rgb(50, 50, 50);
+    color: #b8b8b9;
 }
 
 .visualization a {
-    color: white;
+    color: rgb(50, 50, 50);
     margin-top: 5px;
     text-align: center;
 
@@ -145,10 +146,10 @@ body {
 .question-content {
     width: 50%; /* Adjust the width as needed */
     padding: 15px;
-    border: 4px solid #2B0730;
-    border-radius: 20px;
-    background-color: #45336E;
-    color: white;
+    border: 2px solid #2B0730;
+    border-radius: 5px;
+    background: linear-gradient(#82a7c9, #ee8196);
+    color: rgb(50, 50, 50);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -164,10 +165,10 @@ body {
 
 .question-content p {
     padding: 15px;
-    border: 4px solid #2B0730;
-    border-radius: 20px;
+    border: 2px solid rgb(50, 50, 50);
+    border-radius: 5px;
     background-color: white;
-    color: black;
+    color: rgb(50, 50, 50);
     text-align: justify;
     font-size: 15px;
 }
@@ -175,10 +176,10 @@ body {
 .information {
     width: 30%; /* Adjust the width as needed */
     padding: 15px 0px;
-    border: 4px solid white;
+    border: 4px solid rgb(50, 50, 50);
     border-radius: 20px;
-    background-color: #2B0730;
-    color: white;
+    background-color: #b8b8b9;
+    color: rgb(50, 50, 50);
     display: flex;
     flex-direction: column;
     margin-left: 20px; /* Remove default margin */
@@ -206,23 +207,23 @@ body {
     font-weight: bold;
 }
 .response-options {
-    margin: 40px auto 10px;
+    margin: 20px auto 10px;
     display: flex;
     justify-content: center; /* Center the buttons horizontally */
     text-align: center;
     width: 100%; /* Set the width to 100% to prevent button size change */
-    gap: 20px;
+    gap: 10px;
 }
 
 .response-options button {
-    color: white;
-    border: solid;
+    color: rgb(50, 50, 50);
+    border: 2px solid rgb(50, 50, 50);
     cursor: pointer;
     border-radius: 30px;
     font-size: 25px;
     display: block; /* Ensure the button behaves as a block-level element */
     text-align: center; /* Center the text within the button */
-    padding: 5px;
+    padding: 2px 10px;
 }
 
 #agree-btn, #disagree-btn, #pass-btn {
@@ -234,35 +235,55 @@ body {
 }
 
 #agree-btn, #enter-btn {
-    background-color: #45336E;
+    background-color: rgb(50, 50, 50);
 }
 #agree-btn:hover, #enter-btn:hover {
-    background-color: white;
+    background-color: #43a1f8;
     border: solid;
-    color: #45336E;
+    color: rgb(50, 50, 50);
 
 }
 #disagree-btn {
-    background-color: #2B0730;
+    background-color: #b8b8b9;
 }
 #disagree-btn:hover {
-    background-color: white;
+    background-color: #43a1f8;
     border: solid;
     color: #2B0730;
 }
-#pass-btn, #maybe-btn {
-    background-color: #64203F;
+#pass-btn, #maybe-btn, #mail-btn, #sug-btn{
+    background: linear-gradient(90deg,#82a7c9, #ee8196);
+    padding: 5 30px;
 }
-#pass-btn:hover, #maybe-btn:hover {
-    background-color: white;
-    border: solid;
-    color: #64203F;
+#pass-btn:hover, #maybe-btn:hover, #mail-btn:hover, #sug-btn:hover {
+    background: white;
+    border: 2px solid rgb(50, 50, 50);
+    color: rgb(50, 50, 50);
 }
-
+#submit-suggestion{
+    background: linear-gradient(90deg,#82a7c9, #ee8196);
+    border: 2px solid rgb(50, 50, 50);
+    color: rgb(50, 50, 50);
+}
+#submit-suggestion:hover{
+    background: white;
+    border: 2px solid rgb(50, 50, 50);
+    color: rgb(50, 50, 50);
+}
+#close-popup{
+    background-color: #b8b8b9;
+    border: 2px solid rgb(50, 50, 50);
+    color: rgb(50, 50, 50);
+}
+#close-popup:hover{
+    background: white;
+    border: 2px solid rgb(50, 50, 50);
+    color: rgb(50, 50, 50);
+}
 button[title]::after {
   content: attr(title); /* Set the tooltip content to the value of the title attribute */
   background-color: rgba(0, 0, 0, 0.7); /* Add a background color to the tooltip */
-  color: white; /* Set the text color for the tooltip */
+  color: rgb(50, 50, 50); /* Set the text color for the tooltip */
   padding: 5px 10px; /* Add padding to the tooltip */
   border-radius: 5px; /* Round the corners of the tooltip box */
   position: absolute; /* Position the tooltip absolutely */
@@ -286,15 +307,15 @@ button:hover[title]::after {
 
 .modal-content {
   background-color: #f8f9fa; /* Set the background color of the modal content */
-  border: 2px solid white; /* Define the border style */
+  border: 2px solid rgb(50, 50, 50); /* Define the border style */
   border-radius: 10px; /* Add a border radius for rounded corners */
 }
 
 /* Style the modal header */
 .modal-header {
-  background-color: #2B0730; /* Set the background color of the header */
+  background-color: #b8b8b9; /* Set the background color of the header */
   color: #fff; /* Define the text color */
-  border-bottom: 2px solid white; /* Add a bottom border */
+  border-bottom: 2px solid rgb(50, 50, 50); /* Add a bottom border */
   border-radius: 8px 8px 0 0; /* Adjust the border radius for the top corners */
 }
 
@@ -310,7 +331,7 @@ button:hover[title]::after {
 /* Style the modal footer */
 .modal-footer {
   background-color: #2B0730; /* Set the background color of the footer */
-  border-top: 2px solid white; /* Add a top border */
+  border-top: 2px solid rgb(50, 50, 50); /* Add a top border */
   border-radius: 0 0 8px 8px; /* Adjust the border radius for the bottom corners */
 }
 
@@ -330,12 +351,12 @@ button:hover[title]::after {
 }
 
 span {
-    color: white;
+    color: rgb(50, 50, 50);
 }
 
 .btn-skip,
 .btn-submit {
-    color: #fff; /* Set the text color to white for better contrast */
+    color: #fff; /* Set the text color to rgb(50, 50, 50) for better contrast */
     padding: 10px 20px; /* Increase the padding for a comfortable click area */
     border: none; /* Remove the border for a cleaner look */
     border-radius: 5px; /* Add a subtle border radius for rounded corners */
@@ -375,7 +396,7 @@ span {
 
 
 .tab button {
-    border: 2px solid white;
+    border: 2px solid rgb(50, 50, 50);
     border-bottom: none;
     width: 100%;
     background-color: white;
@@ -390,14 +411,14 @@ span {
 
 
 .tab button.active {
-  background-color: #2B0730;
-  color: white;
+  background-color: #b8b8b9;
+  color: rgb(50, 50, 50);
 }
 
 .tabcontent {
     width: 100%;
     display: none;
-    border: 2px solid white;
+    border: 2px solid rgb(50, 50, 50);
     border-top: none;
     text-align: center;
 }
@@ -408,8 +429,8 @@ span {
     display: none;
     align-items: center;
     border-radius: 15px;
-    background-color: #45336E;
-    border: 2px solid white;
+    background: (90deg, #82a7c9, #ee8196);
+    border: 2px solid rgb(50, 50, 50);
 }
 
 .navigation-bar li {
@@ -419,15 +440,15 @@ span {
 
 .navigation-bar a {
     text-decoration: none;
-    color: white;
+    color: rgb(50, 50, 50);
 }
 
 .navigation-bar a:hover {
-    color: #2B0730;
+    color: white;
 }
 
 .toggle_btn {
-    color: white;
+    color: rgb(50, 50, 50);
     cursor: pointer;
     font-size: 20px;
     padding-left: 10px
@@ -458,6 +479,57 @@ span {
     font-size: 18px;
 }
 
+/* Popup versteckt */
+.hidden {
+    display: none;
+}
+
+/* Popup-Container */
+.popup {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1000;
+    background-color: white;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.3);
+    border-radius: 10px;
+    width: 300px;
+    padding: 20px;
+    box-sizing: border-box;
+}
+
+/* Popup-Inhalt */
+.popup-content {
+    display: flex;
+    flex-direction: column;
+}
+
+.popup textarea {
+    width: 100%;
+    height: 100px;
+    margin-bottom: 10px;
+    padding: 10px;
+    font-size: 14px;
+    border: 1px solid #000000;
+    border-radius: 5px;
+    resize: none;
+}
+
+/* Buttons im Popup */
+.popup-buttons {
+    display: flex;
+    justify-content: space-between;
+}
+
+.popup-buttons button {
+    padding: 5px 10px;
+    font-size: 14px;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
 
 @media (max-width: 768px) {
 
@@ -470,7 +542,7 @@ span {
     .dropdown_menu {
         display: flex;
         flex-direction: column;
-        align items: center;
+        align-items: center;
         justify-content: center;
         z-index: 1;
     }
@@ -501,7 +573,7 @@ span {
     padding: 10px 10px;
     border-radius: 0;
     height: 100%;
-    background-color: #2B0730;
+    background-color: #b8b8b9;
     border: none;
     margin: 0;
 }
@@ -519,8 +591,8 @@ span {
         margin-top: 20px;
         justify-content: center;
         font-size: 20px;
-        background-color: #2B0730;
-        border: 2px solid white;
+        background-color: #b8b8b9;
+        border: 2px solid rgb(50, 50, 50);
         border-radius: 10px;
         padding: 5px 0;
 
@@ -529,15 +601,18 @@ span {
         width: 100%;
         text-align: center;
         text-decoration: none;
-        color: white;
+        color: white
     }
 
 
     .response-options {
-        margin: 20px auto;
+        display: flex;
+        align-items: center;
+        flex-wrap: nowrap;
+        margin: 10px auto;
         justify-content: space-evenly; /* Center the buttons horizontally */
         width: 100%; /* Set the width to 100% to prevent button size change */
-        gap: 2px;
+        gap: 5px;
     }
 
     .response-options button {
