--- a/VOCAB_GAME/FLASK/website/static/css/leaderboard.css
+++ b/VOCAB_GAME/FLASK/website/static/css/leaderboard.css
@@ -34,7 +34,7 @@ body {
 }
 
 .navigation-bar a:hover {
-    color: #2B0730;
+    color: #43a1f8;
 }
 
 .navigation-bar .toggle_btn {
@@ -68,7 +68,7 @@ body {
 .dropdown_menu li {
     padding: 10px;
     display: flex;
-    align items: center;
+    align-items: center;
     justify-content: center;
     font-size: 18px;
 }
@@ -187,7 +187,7 @@ h3 {
     .dropdown_menu {
         display: flex;
         flex-direction: column;
-    align items: center;
+    align-items: center;
     justify-content: center;
     }
 
