--- a/VOCAB_GAME/FLASK/website/static/css/mobile-term-visualization.css
+++ b/VOCAB_GAME/FLASK/website/static/css/mobile-term-visualization.css
@@ -44,9 +44,10 @@ h1 {
 .visualization {
     width: 100%;
     padding: 10px; /* Add padding to the visualization for a consistent spacing */
-    background-color: #2B0730;
-    border: 1px solid white;
-    color: white;
+    background-color: white;
+    border: 2px solid rgb(50, 50, 50);
+    border-radius: 5px;
+    color: rgb(50, 50, 50);
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
@@ -100,10 +101,13 @@ h1 {
 .graph-container {
     width: 100%; /* Set the width to 100% */
     background-color: white;
+    border: 5px solid;
+    border-radius: 5px;
+    border-image: linear-gradient(#82a7c9, #ee8196) 1;
     color: white;
     position: relative;
     overflow: hidden; /* Prevent overflow of the graph visualization */
-    color: red;
+    color: linear-gradient(90deg, #82a7c9, #ee8196);
 }
 
 /* Ensure the height of the graph container matches the visualization image */
@@ -122,8 +126,8 @@ h1 {
 }
 
 .collapsible {
-  background-color: #64203F;
-  color: #818181;
+  background: linear-gradient(90deg, #82a7c9, #ee8196);
+  color: rgb(50, 50, 50);
   cursor: pointer;
   padding: 0 5px;
   margin: 10px auto;
@@ -141,14 +145,14 @@ h1 {
 
 .collapsible:after {
   content: '\25BE';
-  color: #818181;
+  color: rgb(50, 50, 50);
   font-weight: bold;
   float: right;
 
 }
 
 .collapsible:hover:after {
-  color: white;
+  color: rgb(50, 50, 50);
   outline: none;
 }
 
@@ -156,7 +160,7 @@ button:focus {outline:0;}
 
 .active:after {
   content: "\25B4";
-  color: white;
+  color: rgb(50, 50, 50);
 }
 
 .list-content {
@@ -165,7 +169,7 @@ button:focus {outline:0;}
   height: auto;
   overflow: hidden;
   transition: max-height 0.2s ease-out;
-  background-color: #46336e;
+  background-color: white;
   display: block;
   font-size: 13px;
   text-align: justify;
@@ -176,7 +180,7 @@ button:focus {outline:0;}
 .list-content p {
     margin-top: 10px;
     margin-bottom: 10px;
-    color: white;
+    color: rgb(50, 50, 50);
 }
 
 .stat, .selected span {
@@ -214,14 +218,14 @@ button:focus {outline:0;}
 
 .zoom-element {
     height: 40px; /* Adjust the height of the range input as needed */
-    color: white;
-    background-color: #64203F; /* Element color */
+    color: rgb(50, 50, 50);
+    background-color: #b8b8b9; /* Element color */
     cursor: pointer;
     font-size: 25px; /* Adjust the font size as needed */
     display: flex; /* Use flexbox to center the content horizontally and vertically */
     justify-content: center; /* Center the content horizontally */
     align-items: center; /* Center the content vertically */
-    border: 1px solid white; /* Add border to the elements */
+    border: 1px solid rgb(50, 50, 50) /* Add border to the elements */
 
 }
 
@@ -235,8 +239,8 @@ button:focus {outline:0;}
 }
 
 .zoom-buttons button:hover {
-    background-color: white;
-    color: #64203F;
+    background-color: rgb(50, 50, 50);
+    color: #b8b8b9;
 }
 
 .slider {
@@ -244,7 +248,7 @@ button:focus {outline:0;}
   width: 150px;
   height: 5px;
   border-radius: 5px;
-  background: #d3d3d3;
+  background: white;
   outline: none;
   opacity: 0.7;
   -webkit-transition: .2s;
@@ -257,7 +261,7 @@ button:focus {outline:0;}
   width: 10px;
   height: 25px;
   border-radius: 20%;
-  background: #2B0730;
+  background: rgb(50, 50, 50);
   cursor: pointer;
 }
 
@@ -267,8 +271,8 @@ button:focus {outline:0;}
     display: flex;
     align-items: center;
     border-radius: 15px;
-    background-color: #45336E;
-    border: 2px solid white;
+    background: (90deg, #82a7c9, #ee8196);
+    border: 2px solid rgb(50, 50, 50);
 }
 
 .navigation-bar li {
@@ -278,15 +282,15 @@ button:focus {outline:0;}
 
 .navigation-bar a {
     text-decoration: none;
-    color: white;
+    color: rgb(50, 50, 50);
 }
 
 .navigation-bar a:hover {
-    color: #2B0730;
+    color: white;
 }
 
 .toggle_btn {
-    color: white;
+    color: rgb(50, 50, 50);
     cursor: pointer;
     font-size: 20px;
     padding-left: 10px
