--- a/VOCAB_GAME/FLASK/website/static/css/number-question.css
+++ b/VOCAB_GAME/FLASK/website/static/css/number-question.css
@@ -19,7 +19,7 @@ body {
 
 .sidebar-navigation {
     width: 5%;
-    background-color: #64203F;
+    background: linear-gradient(0deg,#82a7c9, #ee8196);
     height: 100%;
     position: fixed;
     z-index: 1;
@@ -57,7 +57,7 @@ body {
 .sidebar-navigation ul li .tooltip {
     display: inline-block;
     position: absolute;
-    background-color: #64203F;
+    background: linear-gradient(0deg,#82a7c9, #ee8196);
     padding: 8px 15px;
     border-radius: 3px;
     margin-top: -26px;
@@ -66,7 +66,7 @@ body {
     visibility: hidden;
     font-size: 13px;
     letter-spacing: 0.5px;
-    color: white;
+    color: rgb(50, 50, 50);
     z-index: 1;
     transition: all ease 0.3s;
 }
@@ -84,7 +84,7 @@ body {
 }
 
 .sidebar-navigation ul li:hover {
-    background-color: #2b0730;
+    background-color: white;
 }
 
 .sidebar-navigation ul li:hover .tooltip {
@@ -93,13 +93,13 @@ body {
 }
 
 .sidebar-navigation ul li.active i {
-    color: white;
+    color: rgb(50, 50, 50);
 }
 
 
 .sidebar-navigation button{
     background: none;
-	color: white;
+	color: rgb(50, 50, 50);
 	border: none;
 	padding: 0;
 	font: inherit;
@@ -109,7 +109,7 @@ body {
 
 h1 {
     text-align: center;
-    color: white;
+    color: rgb(50, 50, 50);
     font-weight: bold;
     font-size: 60px;
     margin: 40px auto 20px ;
@@ -125,7 +125,7 @@ h1 {
 }
 
 .slider {
-    --c: #2B0730; /* active color */
+    --c: rgb(59, 50, 50); /* active color */
     --_c: color-mix(in srgb, var(--c), #000 var(--p,0%));
   --g: 8px; /* the gap */
   --l: 4px; /* line thickness*/
@@ -158,7 +158,7 @@ h1 {
   border-radius: 50%;
   box-shadow: 0 0 0 var(--_b,var(--l)) inset var(--_c);
   transition: .2s;
-  border-image: linear-gradient(90deg,var(--c) 50%,white 0) 0 1/calc(50% - var(--l)/2) 100vw/0 calc(100vw + var(--g));
+  border-image: linear-gradient(90deg,var(--c) 50%,rgb(50, 50, 50) 0) 0 1/calc(50% - var(--l)/2) 100vw/0 calc(100vw + var(--g));
   -webkit-appearance: none;
   appearance: none;
   z-index:1;
@@ -171,20 +171,21 @@ h1 {
   border-radius: 50%;
   box-shadow: 0 0 0 var(--_b,var(--l)) inset var(--_c);
   transition: .2s;
-  border-image: linear-gradient(90deg,var(--c) 50%,white 0) 0 1/calc(50% - var(--l)/2) 100vw/0 calc(100vw + var(--g));
+  border-image: linear-gradient(90deg,var(--c) 50%,rgb(50, 50, 50) 0) 0 1/calc(50% - var(--l)/2) 100vw/0 calc(100vw + var(--g));
   -moz-appearance: none;
   appearance: none;
   z-index:1;
 }
 
 .sliderticks {
+    text-align: center;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   padding: 0 0px;
-  width:100%;
+  width: 97.5%;
   margin: 10px auto 0;
   z-index:1;
-
+  position: relative;
 
 }
 
@@ -193,9 +194,10 @@ h1 {
   justify-content: center;
   width: 2px;
   height: 10px;
-  background: white;
-  color: white;
+  background: rgb(50, 50, 50);
+  color: rgb(50, 50, 50);
   line-height: 40px;
+  
 
 }
 @supports not (color: color-mix(in srgb, red, red)) {
@@ -209,10 +211,10 @@ h1 {
     display: block;
     margin:30px auto 0px;
     padding: 10px 20px;
-    background-color: #45336E;
-    color: white;
+    background:linear-gradient(90deg, #82a7c9, #ee8196);;
+    color: rgb(50, 50, 50);
     text-decoration: none;
-    border: 2px solid white;
+    border: 2px solid rgb(50, 50, 50);
     border-radius: 35px;
     font-weight: bold;
     font-size: 25px;
@@ -224,10 +226,10 @@ h1 {
     transform: translateX(-50%); /* Center the button horizontally */
 }
 .next-button:hover {
-    background-color: #2b0731;
+    background: white;
     text-decoration: none;
     cursor: pointer;
-    color: white;
+    color: rgb(50, 50, 50);
 }
 
 
@@ -237,8 +239,8 @@ h1 {
     display: none;
     align-items: center;
     border-radius: 15px;
-    background-color: #45336E;
-    border: 2px solid white;
+    background: (90deg, #82a7c9, #ee8196);;
+    border: 2px solid rgb(50, 50, 50);
 }
 
 .navigation-bar li {
@@ -248,15 +250,15 @@ h1 {
 
 .navigation-bar a {
     text-decoration: none;
-    color: white;
+    color: rgb(50, 50, 50);
 }
 
 .navigation-bar a:hover {
-    color: #2B0730;
+    color: white;
 }
 
 .toggle_btn {
-    color: white;
+    color: rgb(50, 50, 50);
     cursor: pointer;
     font-size: 20px;
     padding-left: 10px
@@ -290,7 +292,7 @@ h1 {
 
 .dropdown_menu button{
     background: none;
-	color: white;
+	color: rgb(50, 50, 50);
 	border: none;
 	padding: 0;
 	font: inherit;
@@ -310,7 +312,7 @@ h1 {
     .dropdown_menu {
         display: flex;
         flex-direction: column;
-        align items: center;
+        align-items: center;
         justify-content: center;
     }
 
@@ -327,7 +329,7 @@ h1 {
     }
 
     .slider-container {
-        width: 80%;
+        width: 100%;
     }
 
     .next-button {
@@ -335,7 +337,7 @@ h1 {
     }
 
     .sliderticks span {
-      font-size: 13px;
+      font-size: 20px;
     }
 
 }
