--- a/VOCAB_GAME/FLASK/website/static/css/ontology-selection.css
+++ b/VOCAB_GAME/FLASK/website/static/css/ontology-selection.css
@@ -18,7 +18,7 @@ body {
 
 .sidebar-navigation {
     width: 5%;
-    background-color: #64203F;
+    background-color: #b8b8b9;
     height: 100%;
     position: fixed;
     z-index: 1;
@@ -56,7 +56,7 @@ body {
 .sidebar-navigation ul li .tooltip {
     display: inline-block;
     position: absolute;
-    background-color: #64203F;
+    background-color: #b8b8b9;
     padding: 8px 15px;
     border-radius: 3px;
     margin-top: -26px;
@@ -233,7 +233,7 @@ h3 {
 }
 
 .navigation-bar a:hover {
-    color: #2B0730;
+    color: #43a1f8;
 }
 
 .toggle_btn {
@@ -289,7 +289,7 @@ h3 {
     .dropdown_menu {
         display: flex;
         flex-direction: column;
-        align items: center;
+        align-items: center;
         justify-content: center;
     }
 
