--- a/VOCAB_GAME/FLASK/website/static/css/summary.css
+++ b/VOCAB_GAME/FLASK/website/static/css/summary.css
@@ -28,7 +28,7 @@ body {
 
 h1 {
     text-align: center;
-    color: white;
+    color: rgb(50, 50, 50);
     font-weight: bold;
     font-size: 40px;
     margin: 20px auto 20px ;
@@ -38,7 +38,7 @@ h1 {
 
 h3 {
     font-weight: bold;
-    color: white;
+    color: rgb(50, 50, 50);
     margin: 10px auto 20px;
 }
 
@@ -48,18 +48,19 @@ h5 {
 }
 
 .score p {
-    color: white;
+    color: rgb(50, 50, 50);
     font-weight: bold;
     font-size: 18px;
     margin: 0 auto 20px;
 }
 
 .carousel {
-    width: 100%;
-    border: 2px solid black;
+    width: 75%;
+    border: 2px solid rgb(50, 50, 50);
+    border-radius: 5px;
     padding: 0 20px;
-    margin: 10px 0 40px;
-    background-color: #2B0730;
+    margin: 10px auto 40px;
+    background-color:white;
     box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
 .slider-wrapper {
@@ -74,7 +75,7 @@ align-items: center;
 }
 
 .card-list .card-item {
-  color: #fff;
+  color: black;
   user-select: none;
   padding: 15px;
   display: flex;
@@ -127,7 +128,7 @@ align-items: center;
         position: relative; /* Set position to relative */
         width: 100%;
         height: 10px;
-        background-color: #45336E;
+        background-color: #b8b8b9;
         border-radius: 10px;
         box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
     }
@@ -144,7 +145,7 @@ align-items: center;
 
 
 .definition_class {
-    background-color: #64203F;
+    background-color: #b8b8b9;
     border-radius: 10px;
     padding: 5px;
     text-align: center;
@@ -176,39 +177,40 @@ align-items: center;
 }
 
 #home {
-    background-color: #2B0730;
+    background: linear-gradient(90deg, #82a7c9, #ee8196);
+    border: 2px solid rgb(50, 50, 50);
+    color: rgb(50, 50, 50);
 }
 
 #home:hover {
-    border: 2px solid #2B0730;
-    background-color: white;
+    border: 2px solid rgb(50, 50, 50);
+    background: white;
     text-decoration: none;
     cursor: pointer;
-    color: #2B0730;
 }
 #detailed {
-    background-color:#45336E;
+    background-color:#b8b8b9;
 }
 
 #detailed:hover {
-    border: 2px solid #45336E;
+    border: 2px solid #b8b8b9;
     background-color: white;
     text-decoration: none;
     cursor: pointer;
-    color: #45336E;
+    color: #b8b8b9;
 }
 
 #mobile-visualization, #visualization {
-    background-color: #64203F;
+    background-color: #b8b8b9;
 
 }
 
 #visualization:hover {
-    border: 2px solid #64203F;
+    border: 2px solid #b8b8b9;
     background-color: white;
     text-decoration: none;
     cursor: pointer;
-    color: #64203F;
+    color: #b8b8b9;
 }
 
 #mobile-visualization {
