--- a/VOCAB_GAME/FLASK/website/templates/department.html
+++ b/VOCAB_GAME/FLASK/website/templates/department.html
@@ -13,13 +13,13 @@
     <ul>
         <li class="active">
             <a href="/">
-                <i class="bi bi-house-door"></i>
+                <i class="bi bi-house-up"></i>
                 <span class="tooltip">Home</span>
             </a>
         </li>
         <li class="active">
             <button class="backButton" onclick="goBack()">
-                <i class="bi bi-caret-left"></i>
+                <i class="bi bi-arrow-left-circle"></i>
                 <span class="tooltip">Back</span>
             </button>
         </li>
@@ -31,8 +31,8 @@
         <i class="bi bi-list"></i>
     </div>
     <div class="dropdown_menu">
-        <li><a href="/"><i class="bi bi-house-door-fill"></i></a></li>
-        <li><button class="backButton" onclick="goBack()"><i class="bi bi-caret-left-fill"></i></button></li>
+        <li><a href="/"><i class="bi bi-house-up-fill"></i></a></li>
+        <li><button class="backButton" onclick="goBack()"><i class="bi bi-arrow-left-circle-fill"></i></button></li>
         <li><a href="/logout"><i class="bi bi-box-arrow-right"></i></a></li>
     </div>
 </div>
