--- a/VOCAB_GAME/FLASK/website/templates/leaderboard.html
+++ b/VOCAB_GAME/FLASK/website/templates/leaderboard.html
@@ -14,7 +14,7 @@
         <i class="bi bi-list"></i>
     </div>
     <div class="dropdown_menu">
-        <li><a href="/"><i class="bi bi-house-door-fill"></i></a></li>
+        <li><a href="/"><i class="bi bi-house-up-fill"></i></a></li>
         <li><a href="/challenges"><i class="bi bi-map-fill"></i></a></li>
         <li><a href="/logout"><i class="bi bi-box-arrow-right"></i></a></li>
     </div>
