--- a/VOCAB_GAME/FLASK/website/templates/mobile-ontology-visualization.html
+++ b/VOCAB_GAME/FLASK/website/templates/mobile-ontology-visualization.html
@@ -15,8 +15,8 @@
         <i class="bi bi-list"></i>
     </div>
     <div class="dropdown_menu">
-        <li><a href="/"><i class="bi bi-house-door-fill"></i></a></li>
-        <li><button class="backButton" onclick="goBack()"><i class="bi bi-caret-left-fill"></i></button></li>
+        <li><a href="/"><i class="bi bi-house-up-fill"></i></a></li>
+        <li><button class="backButton" onclick="goBack()"><i class="bi bi-arrow-left-circle-fill"></i></button></li>
         <li><a href="/logout"><i class="bi bi-box-arrow-right"></i></a></li>
     </div>
 </div>
