--- a/VOCAB_GAME/FLASK/website/templates/term-visualization.html
+++ b/VOCAB_GAME/FLASK/website/templates/term-visualization.html
@@ -11,12 +11,12 @@
 {% block content %}
 <!-- Button to go back to the previous page -->
 <button onclick="goBack()" id="back">
-    <i class="bi bi-caret-left-fill"></i>
+    <i class="bi bi-arrow-left-circle"></i>
     <span class="tooltip">Back</span>
 </button>
 
 <!-- Navigation link to home -->
-<a class="nav-item nav-link" id="home" href="/"><i class="bi bi-house-door-fill"></i></a>
+<a class="nav-item nav-link" id="home" href="/"><i class="bi bi-house-up-fill"></i></a>
 
 <!-- Title and subtitle for entering user's own definition -->
 <div class="title-container">
